--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_CON= 'mongodb+srv://ksbschool79:<Jynxyp00h79>@cluster0.4vcjnwh.mongodb.net/'
+MONGO_CON= 'mongodb+srv://Me:dbpassword@cluster0.o4cjgef.mongodb.net/'
 
