--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGO_CON= 'mongodb+srv://Me:dbpassword@cluster0.o4cjgef.mongodb.net/'
-
+MONGO_CON= 'mongodb+srv://Me:dbpassword@cluster0.o4cjgef.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
