--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_CON= 'mongodb+srv://Me:dbpassword@cluster0.o4cjgef.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_CON='mongodb+srv://Me:dbPassword@cluster0.o4cjgef.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
